--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3.9'
 
 services:
   frontend:
-    build: .
+    build:
+      context: frontend
+      args:
+      - REACT_APP_BACKEND_URL:${REACT_APP_BACKEND_URL}
     ports:
       - 80:80
